--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,11 +10,13 @@
 		PW<input name="pw" type="password"><br>
 		<input type="submit" value="login">
 	</form>
-	
+	<hr>
 	<form action="test/memberInfo.do">
 		ID<input name="id"><br>
 		PW<input name="pw" type="password"><br>
 		<input type="submit" value="회원정보찾기">
 	</form>
+	<hr>
+	<a href="member/listMembers.do">모든 회원 목록</a>
 </body>
 </html>
